--- a/.github/workflows/scheduled_pipeline.yml
+++ b/.github/workflows/scheduled_pipeline.yml
@@ -7,27 +7,55 @@ on:
 jobs:
   run-pipeline:
     runs-on: ubuntu-latest
+    env:
+      # These should be set in the repository secrets
+      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      AWS_REGION: ${{ secrets.AWS_REGION }}
+      S3_BUCKET: ${{ secrets.S3_BUCKET }}
+      DATA_SOURCE: ${{ secrets.DATA_SOURCE }}
     steps:
       - uses: actions/checkout@v4
+
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.10'
+
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+
       - name: Fetch data
         run: |
           python scripts/ingest/fetch_data.py --source "$DATA_SOURCE" --out-dir data/raw
-        env:
-          DATA_SOURCE: ${{ secrets.DATA_SOURCE }}
-      - name: Preprocess (placeholder)
+
+      - name: Preprocess data
         run: |
-          echo "Add your preprocess step here or call your existing preprocess script"
+          python scripts/preprocess/preprocess.py --raw-dir data/raw --out-dir data/processed --min-rows 6
+
       - name: Train models
         run: |
           python models/train_models.py --data-path data/processed/latest.csv --out-model-dir model_registry --out-forecast-dir artifacts/forecasts --horizon 3
-      - name: Upload forecasts (placeholder)
+
+      - name: List generated artifacts
         run: |
-          echo "Upload artifacts/forecasts to your storage or notify stakeholders"
+          ls -la artifacts || true
+          ls -la artifacts/forecasts || true
+
+      - name: Install AWS CLI
+        run: |
+          pip install awscli
+
+      - name: Upload forecasts to S3
+        if: env.S3_BUCKET != ''
+        run: |
+          aws configure set aws_access_key_id "$AWS_ACCESS_KEY_ID"
+          aws configure set aws_secret_access_key "$AWS_SECRET_ACCESS_KEY"
+          aws configure set region "$AWS_REGION"
+          aws s3 cp artifacts/forecasts s3://$S3_BUCKET/forecasts/${{ github.run_id }}/ --recursive
+
+      - name: Notify (placeholder)
+        run: |
+          echo "Pipeline finished. Uploads (if configured) were attempted. Add Slack/email notifications here."
